--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body {
   cursor: pointer;
   transition: all 0.3s ease;
   border: 2px solid #ff8c00;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 9px 3px #ff8c00;
   position: relative;
   overflow: hidden;
   text-decoration: none; /* Remove sublinhado dos links */
@@ -119,7 +119,7 @@ body {
 }
 
 .button-text {
-  font-size: 18px;
+  font-size: 15px;
   font-weight: 600;
   color: #333;
   text-align: center;
@@ -270,3 +270,4 @@ body {
     max-width: 500px;
   }
 }
+
